fix(style): set even higher z-index to avoid cookie banners

--- a/SoM.css
+++ b/SoM.css
@@ -1,6 +1,6 @@
 .SoM {
     position: fixed;
-    z-index: 9999;
+    z-index: 2147483646;
 }
 
 .SoM > label {
